# pdm-template-uq

./: .gitignore  404.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  release.py  sitemap.xml
.github/workflows/: deploy.yml  docs.yml
CONTRIBUTING/: index.html
docs/: CONTRIBUTING.md  README.md  how-to-guides.md  tutorials.md
how-to-guides/: index.html
reference/overview/: index.html
search/: search_index.json
src/pdm_template_uq/: __init__.py  example.py
theory/: index.html
tutorials/: index.html
