[project]
name = "pdm-template-uq"
dynamic = ["version"]
description = "Template for a pdm project for uncertainty quantification and scientific computing"
authors = []
dependencies = [
    "numpy>=1.26.3",
    "matplotlib>=3.8.2",
    "scipy>=1.12.0",
]
requires-python = ">=3.11"
readme = "docs/README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research"
]

[project.urls]
Repository = "https://github.com/eckelsjd/pdm-template-uq.git"
Documentation = "https://eckelsjd.github.io/pdm-template-uq/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pylint.MASTER]
ignore-paths = [ "^.venv/.*$", "^docs/*" ]

[tool.pylint."MESSAGES CONTROL"]
disable = '''
missing-module-docstring,
missing-class-docstring,
missing-function-docstring
'''

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.pdm.version]
source = "file"
path = "src/pdm_template_uq/__init__.py"

[tool.pdm.scripts]
post_init = "pdm install"
test = "pytest --cov=pdm_template_uq tests"
docs = "mkdocs serve"
release = "python release.py"

[tool.pdm]
package-type = "library"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.5",
    "GitPython>=3.1.41",
    "mkdocstrings[python]>=0.24.0",
]
